   * Add new shortcut for split + auto-br - thx oep42
   * Add "Sort by" in "Batch convert" - thx Masina86
   * Add image format RhozetHarmonic (only read) - thx Arianna
   * Add "Toggle custom surround text with" shortcut - thx HadiSparrow
   * Add "Go to next/previous time code from video position" shortcuts - thx faon-92
* IMPROVED:
   * Update French translation - thx Pierre
   * Update Hungarian translation - thx Zityi
   * Update Brazilian Portuguese translation - thx igorruckert
   * Update Bulgarian translation - thx Калин
   * Update Korean translation - thx domddol
   * Update Italian translation - thx bovirus
   * Update Portuguese translation - thx hugok79
   * Update Spanish translations (es-ES/ex-MX/es-AR) - thx paconaranjo
   * Update Russian translation - thx elfriob
   * Update Whisper CPP to v1.2.0
   * Update yt-dlp to 2023.03.04
   * "Multiple replace" apply button now changes main window - convert Sopor
   * Set iTT default time code format to frames - thx chenlung 
   * Try to handle large ASSA files better - thx MMT
   * Improve double-click-word-select in syntax color text box - thx Janusz/von Suppé
   * Allow split to split to single subtitles - thx Kyth
   * Improve top align detection in TTML - thx koewper
   * Optimize saving of TTML files
   * Allow new syntax for YouTube transcript +1 hour - thx Vasudeo
   * FCP XML now supports latest version - thx Dvid
   * Improve "Redo casing" in "Batch convert" - thx chschmit 
   * Allow larger "Max pixels is space" for nOCR - thx Edgar-Galan
* FIXED:
   * Fix extra space after font in EBU STL - thx Stefan
   * Fix possible crash in batch convert w overwrite - thx chensimmons
   * Fix issue with continuation style suffix "..." and comma - thx Edwin
   * Fix Korean in installer - thx 슈니
   * Fix Japanese in installer - thx homunet
   * Fix for SSA style - thx Amstramgram
   * Fix DCinemaSmpte2014 PNG export (was hidden) - thx MijBro